refactored ReceiveSIAdapter to subclasses for BTSerial, HWSerial and USBSerial, changed how connecting to BTSerial works, fixed some bugs
